--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg+xml" href="/logo-dark.svg">
-    <link rel="apple-touch-icon" sizes="120x120" href="/icon/apple-touch-120x120.png">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#aaaaaa">
+    <link rel="shortcut icon" href="/apple-touch-120x120.png">
+    <link rel="icon" type="image/x-icon" href="/apple-touch-120x120.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-120x120.png">
     <link rel="dns-prefetch" href="https://fonts.googleapis.com">
     <link rel="dns-prefetch" href="https://fonts.gstatic.com">
     <link rel="preconnect" crossorigin="anonymous" href="https://fonts.googleapis.com">
