--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </script>
   </head>
 
-  <body class="font-sans text-gray-700 dark:text-gray-200">
+  <body class="font-sans text-gray-700 dark:text-gray-200 min-h-100vh">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
