--- a/about.html
+++ b/about.html
@@ -7,9 +7,8 @@ header-mask: 0.1
 multilingual: true
 ---
 
-
-
-分享slam学习、读书笔记
+<p>我的笔记营地。</p>
+<p>封面图片来自wlop。</p>
 
 {% if site.disqus_username %}
 <!-- disqus 评论框 start -->
